dz/13-k8s-03/manifest/deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: multitool-dep
  name: multitool-dep
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitool
  template:
    metadata:
      labels:
        app: multitool
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
          - name: nginx-index
            mountPath: /usr/share/nginx/html/index.html
            subPath: index.html
      - name: multitool
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 8080
      volumes: 
        - name: nginx-index
          configMap:
            name: my-configmap1
