dz/13-k8s-03/manifest/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-dep
  name: nginx-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-dep
  template:
    metadata:
      labels:
        app: nginx-dep
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
          - name: tls-certs
            mountPath: /etc/nginx/certs
            readOnly: true
          - name: nginx-index
            mountPath: /usr/share/nginx/html/index.html
            subPath: index.html
          - name: nginx-default
            mountPath: /etc/nginx/conf.d/default.conf
            subPath: default.conf
      volumes: 
        - name: tls-certs
          secret:
            secretName: tls-certs
        - name: nginx-index
          configMap:
            name: my-configmap2
        - name: nginx-default
          configMap:
            name: my-configmap2
