dz/13-k8s-03/manifest/deployment-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-multitool-nodeport
spec:
  selector:
    app: multitool
  ports:
    - name: for-nginx
      nodePort: 30100
      port: 80
    - name: for-multitool
      nodePort: 30200
      port: 8080
  type: NodePort
