dz/13-k8s-03/manifest/deployment-svc2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: ClusterIP
  selector:
    app: nginx-dep
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 80
